Refactor GuiFilme and Kotlinize film UI
Convert GuiFilme, film model helpers, table models, cell renderers, film actions, bookmark actions, duplicate statistics, and duplicate UI support classes from Java to Kotlin.

Split GuiFilme responsibilities into focused lifecycle, selection, table, context-menu, bookmark, search, and action controllers while preserving existing Swing behavior.

Modernize program set table handling, remove obsolete tab base coupling, tighten film filtering predicates, add focused tests, and update dependencies.